--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "RPT"
+name: RPT
 output_dir: ../docs
 navbar:
-  title: "RPT"
+  title: RPT
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/gopi2904/rpt
 output:
   workflowr::wflow_html:
     toc: yes
